[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/fonts/font_sub_title.tres" type="DynamicFont" id=1]
[ext_resource path="res://scenes/ui/menu/core/form/GameMenuButton.gd" type="Script" id=2]
[ext_resource path="res://assets/sound/ui/select-next.wav" type="AudioStream" id=3]
[ext_resource path="res://assets/images/ui/BarZero.svg" type="Texture" id=4]
[ext_resource path="res://assets/material/ui/UIFocus.tres" type="Material" id=6]

[node name="GameMenuButton" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 250, 48 )
focus_mode = 2
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Container" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="Container"]
margin_right = 20.0
margin_bottom = 600.0
rect_min_size = Vector2( 20, 0 )
size_flags_vertical = 3

[node name="Hint" type="TextureRect" parent="Container/Control"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 4 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="Container"]
margin_left = 24.0
margin_right = 1000.0
margin_bottom = 600.0
rect_min_size = Vector2( 200, 0 )
focus_mode = 0
mouse_filter = 1
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 1 )
flat = true
align = 0

[node name="Label" type="Label" parent="Container/Button"]
modulate = Color( 1, 1, 1, 0.588235 )
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 1 )
text = "button"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control2" type="Control" parent="Container"]
margin_left = 1004.0
margin_right = 1024.0
margin_bottom = 600.0
rect_min_size = Vector2( 20, 0 )
size_flags_vertical = 3

[node name="Hint" type="TextureRect" parent="Container/Control2"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 4 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Overlay" type="ColorRect" parent="."]
visible = false
material = ExtResource( 6 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
bus = "Sfx"

[node name="Tween" type="Tween" parent="."]

[connection signal="mouse_entered" from="Container/Button" to="." method="_on_Button_mouse_entered"]
[connection signal="mouse_exited" from="Container/Button" to="." method="_on_Button_mouse_exited"]
[connection signal="pressed" from="Container/Button" to="." method="_on_Button_pressed"]
[connection signal="item_rect_changed" from="Overlay" to="." method="_on_Overlay_item_rect_changed"]
